init prettier
